// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when type is email renders correctly with props passed in 1`] = `
<div
  className="govuk-form-group "
>
  <label
    className="govuk-label"
    htmlFor="testInputCustom"
  />
  <span
    className="govuk-hint"
    id="testInput-hint"
  >
    test
  </span>
  <input
    autoComplete="email"
    className="govuk-input govuk-!-width-one-half"
    id="testInputCustom"
    name="testInput"
    noValidate={true}
    onChange={[Function]}
    spellCheck="false"
    type="email"
  />
</div>
`;

exports[`when type is not specified renders correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <label
    className="govuk-label"
    htmlFor="testInputCustom"
  />
  <span
    className="govuk-error-message"
    id="testInputCustomError"
  >
    <span
      className="govuk-visually-hidden"
    >
      Error:
    </span>
    this is a test
  </span>
  <input
    className="govuk-input govuk-!-width-one-half"
    id="testInputCustom"
    name="testInput"
    noValidate={true}
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`when type is not specified renders correctly with props passed in 1`] = `
<div
  className="govuk-form-group "
>
  <label
    className="govuk-label"
    htmlFor="testInputCustom"
  />
  <span
    className="govuk-hint"
    id="testInput-hint"
  >
    test
  </span>
  <input
    className="govuk-input govuk-!-width-one-half"
    id="testInputCustom"
    name="testInput"
    noValidate={true}
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`when type is not specified renders correctly without props passed in 1`] = `
<div
  className="govuk-form-group "
>
  <label
    className="govuk-label"
    htmlFor="undefinedCustom"
  />
  <input
    className="govuk-input govuk-!-width-one-half"
    id="undefinedCustom"
    noValidate={true}
    onChange={[Function]}
    type="text"
  />
</div>
`;
